--- a/profile.css
+++ b/profile.css
@@ -3,10 +3,15 @@
 	display: inline-block;
 }
 
-.profile-picture img {
+.profile-picture img{
 	width: 200px;
 	height: auto;
-	padding: 20px;
+}
+
+.profile-picture {
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 20px;
 }
 
 .profile-info {
@@ -14,5 +19,5 @@
 }
 
 .basic-info {
-	
+
 }
