--- a/profile.css
+++ b/profile.css
@@ -4,6 +4,10 @@
 	width: 100%;
 }
 
+.main-profile {
+	display: inline-block;
+}
+
 .profile-picture img{
 	width: 200px;
 	height: auto;
@@ -39,4 +43,10 @@ table.basic-info td{
 table.basic-info td.key{
 	color: gray;
 	font-weight: normal;
+}
+
+.profile-header, .main-profile{
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 0 rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);
+	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 0 rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 0 rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);
 }
