--- a/profile.css
+++ b/profile.css
@@ -47,6 +47,12 @@ table.basic-info td.key{
 	font-weight: normal;
 }
 
+.position {
+	margin-top: 0px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 .profile-header, .main-profile{
 	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 0 rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);
 	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 0 rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);
