--- a/profile.css
+++ b/profile.css
@@ -58,3 +58,11 @@ table.basic-info td.key{
 	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 0 rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);
 	box-shadow: 0 1px 1px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 0 rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);
 }
+
+#requirements table {
+	width: 95%;
+}
+
+#requirements td.hours {
+	width: 75px;
+}
