--- a/profile.css
+++ b/profile.css
@@ -47,7 +47,7 @@ table.basic-info td.key{
 	font-weight: normal;
 }
 
-.about-me {
+.profile-content {
 	padding-left: 20px;
 	padding-right: 20px;
 }
