--- a/profile.css
+++ b/profile.css
@@ -25,6 +25,7 @@
 }
 
 .basic-info {
+	width: 440px;
 	margin-top: 20px;
 }
 
@@ -50,6 +51,10 @@ table.basic-info td.key{
 .profile-content {
 	padding-left: 20px;
 	padding-right: 20px;
+}
+
+.position {
+	margin-top: 0px;
 }
 
 .profile-header, .main-profile{
