--- a/template.css
+++ b/template.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Verdana';
-  font-size: 100pt; /* 20 pt */ 
-  color: black;
+  font-size: 20pt; /* 20 pt */ 
+  color: blue;
   background-color: #6699CC;
   /*background-color: white;*/
   /*background-image: url('images/background.jpg');*/
