--- a/bootstrap.css
+++ b/bootstrap.css
@@ -142,15 +142,17 @@ textarea {
   vertical-align: top;
 }
 body {
-  margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
-  line-height: 20px;
-  color: black;
+	margin: 0;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	line-height: 20px;
+	color: #3366FF;
+	text-transform: none;
+	font-weight: 400;
 }
 a {
-  color: #0088cc;
-  text-decoration: none;
+	color: #3298FF;
+	text-decoration: none;
 }
 a:hover {
   color: #005580;
@@ -4688,7 +4690,7 @@ button.close {
 }
 @media (max-width: 979px) {
   body {
-    padding-top: 0;
+	padding-top: 20px;
   }
   .navbar-fixed-top,
   .navbar-fixed-bottom {
