--- a/reset.css
+++ b/reset.css
@@ -4,11 +4,24 @@ Code licensed under the BSD License:
 http://developer.yahoo.net/yui/license.txt
 version: 0.10.0
 */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquote,th,td{margin:0;padding:0;}
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquote,th,td{
+	margin: 0;
+	padding-top: 3;
+	padding-right: 3px;
+	padding-bottom: 10px;
+	padding-left: 0px;
+}
+
 table{border-collapse:collapse;border-spacing:0;}
+
 fieldset,img{border:0;}
+
 address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}
+
 ol,ul {list-style:none;}
-caption,th {text-align:left;}
+
+caption,th {text-align:center;}
+
 h1,h2,h3,h4,h5,h6{font-size:100%;}
+
 q:before,q:after{content:'';}
