--- a/template.css
+++ b/template.css
@@ -1,13 +1,18 @@
-body {
-  font-family: 'Verdana';
-  font-size: 20pt; /* 20 pt */ 
-  color: blue;
-  background-color: #6699CC;
-  /*background-color: white;*/
+/* Color Palette: http://www.color-hex.com/color-palette/189 */
+
+/* may have to be logged in to view BODY CSS */ 
+body { 
+	font-family: Arial, Geneva, Helvetica;
+	font-size: 20pt; /* 20 pt */
+	color: black;
+	/* background-color: #3399FF; */  
+	background-color: #00477F;  
   /*background-image: url('images/background.jpg');*/
   /*background-repeat: repeat-x;*/
-  text-align: center;
-  padding-bottom: 1em;
+	text-align: center;
+	margin-bottom: 100px; /*not sure what this does */
+	padding-top: 7em; /* not working */ 
+    padding: 20px; 
 }
 
 a {
@@ -19,13 +24,17 @@ a:hover {
 }
 
 div {
-  display: block;
-  text-align: left;
+	display: block;
+	text-align: center;
+	padding-top: 15px;
+	padding-right: 7px;
 }
 
 div.imagewrap {
   display: block;
   text-align: center;
+  margin-top: 30px; 
+
 }
 
 div#galleryDiv {
@@ -36,8 +45,8 @@ h1 {
 }
 
 h2 {
-  font-size: 14pt;
-  font-weight: normal;
+	font-size: 20pt;
+	font-weight: normal;
 }
 
 h3 {
@@ -58,35 +67,43 @@ img#header {
   display: block;*/
 }
 
+/* BODY TEXT */ 
 #paperLayer1 {
-  /*width: 1000px;*/
-  width: 980px;
-  margin-left: auto;
-  margin-right: auto;
-  /*background-image: url('images/paperLayer1.jpg');*/
+	width: 1000px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 40px; 
+	padding-bottom: 10px; 
+	/* background-image: url('images/paperLayer1.jpg'); 
   /*background-repeat: repeat-y;*/
-  background-color: white;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
+	background-color: white;
+	opacity: 1;
+	/* border-left: solid 1px #3399FF;
+	border-right: solid 1px #3399FF; */ 
+	border-radius: 7px; 
+	border: solid 2px #afb6b9; 
+
 }
 
 #paperLayer2 {
-  /*background-image: url('images/paperLayer2.jpg');*/
+  /* background-image: url('images/paperLayer2.jpg');*/
   /*background-repeat: no-repeat;*/
 }
 
 #paperHeader {
-  height: 180px;
+  height: 200px; 
   width: 980px;
+  padding-top: 20px;
+  padding-bottom: -10px
   /*margin-left: 10px;*/
   /*margin-right: 10px;*/
-  border-top: solid 1px black;
+  border-top: solid 1px #3399FF;
 }
 
 #paperHeader img {
   /*float: right;*/
-  border-left: solid 1px black;
-  border-bottom: solid 1px black;
+  border-left: solid 1px white;
+  border-bottom: solid 1px white;
   /*float: left;*/
   /*margin-right: 1px;*/
   /*margin-bottom: 1px;*/
@@ -95,8 +112,8 @@ img#header {
 #logo {
   width: 180px;
   height: 179px;
-  border-left: solid 1px black;
-  border-bottom: solid 1px black;
+  border-left: solid 1px white;
+  border-bottom: solid 1px white;
   display: none;
 }
 
@@ -104,48 +121,72 @@ img#header {
   position: relative;
   left: -559px;
   width: 238px;
-  height: 179px;
+  height: 200px; /* 179 */ 
   display: block;
   float: right;
-  border-left: solid 1px black;
-  border-bottom: solid 1px black;
+  padding-top: 35px; 
+  border-left: solid 1px white;
+  border-bottom: solid 1px white;
 }
 
+
+/* where graphic belongs */ 
 #quote {
   position: relative;
-  left: 239px;
   float: right;
   /*width: 379px;*/
-  width: 558px;
-  height: 179px;
-  border-left: solid 1px black;
-  border-bottom: solid 1px black;
-  background-image: url('images/new_quote.jpg');
+  width: 758px;
+  height: 240px;
+  padding-top: 35px; 
+  border-left: solid 1px white;
+  background-image: url('images/new_quote2.jpg'); 
 }
 
 #paperHeader ul {
-  height: 180px;
+  height: 120px;
   width: 182px;
+  
 }
 
 #paperHeader li {
   /*margin-bottom: 1px;*/
-  border-bottom: solid 1px black;
+  border-bottom: solid 0px #3366ff; 
+  padding-bottom: 1px; 
 }
 
+/* top tabs */ 
 #paperHeader li a {
-  font-family: 'Verdana';
-  font-size: 12pt;
-  font-weight: bold;
-  text-decoration: none;
-  color: white;
-  background-color: #696CD6;
-  height: 29px;
-  line-height: 29px;
-  padding-left: 5px;
-  display: block;
+	
+	color: #0033a0; 
+	/* color: #3366ff; */ 
+	width: 120px;
+	height: 30px;
+	line-height: 17px;
+	text-transform: uppercase;
+	text-align: left;  
+	/*font-family: 'Times New Roman';*/
+	font-family:Arial, Helvetica, sans-serif;
+	font-weight: bold; 
+	text-decoration: none;
+	/*font-size: 10pt;*/
+	font-size: 14pt;
+	/* font-family: Arial, Helvetica, sans-serif;
+	text-transform: lowercase;
+	font-size: 18pt;
+	font-weight: bold; 
+	text-decoration: none;
+	color: #0033a0;
+	text-align: left;
+	/* background-color: #99CCFF; */ 
+	height: 40px;
+	line-height: 43px; /*29 */
+	padding-left: 5px;
+	padding-bottom: 1px;
+	margin-left: 7px;
+	display: block;
 }
 
+/* 
 #paperHeader li a#link_1 {
   background-image: url('images/new_link_1.jpg');
 }
@@ -163,48 +204,62 @@ img#header {
 }
 #paperHeader li a#link_6 {
   background-image: url('images/new_link_6.jpg');
-}
+} */ 
 
 #paperHeader li a:hover {
-  background-color: #B4B5D6;
+	/* background-color: #5588ff; */
+	color: #FCB81C;
+	border-radius: 6px;  
+	font-style: italic;
 }
 
 #paperHeader li a.active {
-  background-color: #383CD6;
+	/* background-color: #5588ff6; */ 
+	color: #FCB81C; 
+	padding-top: 0px;
+	
 }
 
 #paperSubHeader {
-  margin-top: 15px;
+  margin-top: 75px;
   /*margin-left: 10px;*/
   /*margin-right: 10px;*/
 }
 
 #paperSubHeader #welcomeBar {
-  width: 948px;
-  height: 21px;
-  line-height: 21px;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 10pt;
-  font-weight: bold;
-  color: white;
-  /*background-color: #696CD6;*/
-  background-color: #003366;
-  border: solid 1px black;
+	width: 1000px;
+	height: 61px;
+	line-height: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 15pt;
+	font-family: Thonburi;
+	text-transform: uppercase;
+	text-align: left;
+	/* font-weight: bold; */ 
+	color: white;
+	padding-bottom: 7px;
+	margin-bottom: 10px;
+	/*background-color: #696CD6;*/
+	background-color: #0033a0;   /*#003366; */  /* border: solid 1px black; */
 }
 
 #paperSubHeader #welcomeBar p {
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-left: 13px; 
+  padding-right: -35px; 
+  margin-right: -7px; 
+  color: white; 
+  
 }
 
 #paperSubHeader #welcomeBar a {
-  color: white;
+  color: #ffb81c;
   text-decoration: none;
+ 
 }
 
 #paperSubHeader #welcomeBar a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 #paperSubHeader #welcomeBar #logout {
@@ -212,44 +267,71 @@ img#header {
 }
 
 #paperSubHeader ul {
-  width: 950px;
-  height: 17px;
+  width: 1000px;
+  height: 37px;
+  float: center; 
   margin-left: auto;
   margin-right: auto;
-  padding-left: 10px;
+  padding-left: 0px; 
+  padding-top: 5px; 
 }
 
 #paperSubHeader li {
-  float: left;
-  width: 118px;
-  height: 18px;
-  background-image: url('images/sublink.jpg');
+  float: left; 
+  width: 117px;
+  height: 28px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 10px; 
+  padding-left: 10px; 
+  /* background-image: url('images/sublink.jpg'); */ 
   background-repeat: no-repeat;
 }
 
+/* bottom tabs */ 
 #paperSubHeader li a {
-  color: black;
-  width: 113px;
-  height: 13px;
-  line-height: 13px;
-  margin: 0px 3px 4px 1px;
-  /*font-family: 'Times New Roman';*/
-  font-family: 'Verdana';
-  /*font-size: 10pt;*/
-  font-size: 8pt;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  display: block;
+	color: #0033a0; 
+	/* color: #3366ff; */ 
+	width: 120px;
+	height: 30px;
+	line-height: 17px;
+	/*font-family: 'Times New Roman';*/
+	font-family: Arial, Helvetica, sans-serif;
+	/*font-size: 10pt;*/
+	font-size: 14pt;
+	font-weight: bold; 
+	text-align: center;
+	/* border-style: solid;
+    border-color: #ffb81c;*/ 
+	display: list-item;
+	margin-top: 0px;
+	margin-right: auto;
+	margin-left: 10px;
+	margin-bottom: 4px;
+	padding-left: 5px;
+	padding-top: 10px;
+	padding-right: 5px;
 }
 
 #paperSubHeader li a:hover {
-  color: #383CD6;
+  /* color: #383CD6; */
+  /* color: #3366ff; */ 
+  /* background-color: #ffb81c; */
+  /* border-style: solid; 
+  border-color: #ffb81c; */ 
+  color: white; 
+  background-color: #ffb81c;
+  border-radius: 6px; 
+  font-style:italic; 
+  text-decoration: none; 
+  
 }
 
 #paperSubHeader li a.active {
   /*background-color: #B4B5D6;*/
-  background-color: #9ACCFF;
+  /* background-color: #ffb81c; */
+  border-radius: 5px; 
+  color: #FCB81C; 
 }
 
 #paper {
@@ -259,7 +341,7 @@ img#header {
 }
 
 #paper .login {
-  height: 1.5em;
+  height: 2px;
   margin-bottom: 5px;
 }
 
@@ -269,10 +351,14 @@ img#header {
 
 #paper .errorMessage {
   width: 938px;
-  background-color: pink;
-  border: solid 1px red;
+  height: 50px; 
+  background-color: white; 
+  /* border: solid 1px red; */
+  color: black; 
+  font-size: 16px; 
   margin-bottom: 15px;
   padding: 5px;
+  padding-top: 30px; 
 }
 
 #paper .upcomingEvents {
@@ -444,12 +530,16 @@ img#header {
 
 #paper .newsItem {
   width: 720px;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
 
 #paper .newsItem h2 {
   border-bottom: solid 1px black;
   padding-left: 0px;
+  padding-top: 25px; 
+  line-height: 25px; 
+  size: 25px; 
+  color: #0333A0;   
 }
 
 #paper .newsItem .date {
@@ -458,7 +548,13 @@ img#header {
 }
 
 #paper .newsItem p {
+  padding-top: 15px; 
   padding-left: 5px;
+  size: 14px; 
+  line-height: 25px; 
+  text-align: left; 
+  color: black; 
+  
 }
 
 #paper .newsItem .link {
@@ -471,6 +567,7 @@ img#header {
   width: 980px;
   /*height: 65px;*/
   height: auto;
+  padding-bottom: 15px; 
   /*background-image: url('images/paperFooter.jpg');*/
   /*background-position: bottom left;*/
   /*background-repeat: no-repeat;*/
@@ -481,14 +578,14 @@ img#header {
 }
 
 #disclaimer {
-  width: 900px;
-  padding-top: 1em;
+  width: 920px;
+  padding-top: 40px;
   padding-left: 40px;
   padding-right: 40px;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
-  border-bottom: solid 1px black;
-  background-color: white;
+  /* border-left: solid 1px #3399FF;
+  border-right: solid 1px #3399FF;
+  border-bottom: solid 1px #3399FF; */
+  background-color: #00477F;
   /*margin-top: 15px;*/
   padding-bottom: 15px;
   margin-left: auto;
@@ -497,7 +594,11 @@ img#header {
 
 #disclaimer p {
   text-align: center;
-  font-size: 8pt;
+  font-size: 12pt;
+  color: white; 
+  font-family: Arial, Helvetica, sans-serif; 
+  padding-bottom: 2px;  
+
 }
 
 ul#gallery > li {
