--- a/template.css
+++ b/template.css
@@ -270,19 +270,19 @@ img#header {
 #paperSubHeader ul {
   width: 1000px;
   height: 37px;
-  float: center; 
+  /* float: center; 
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */ 
+  margin: 0px auto; 
   padding-left: 0px; 
   padding-top: 5px; 
 }
 
 #paperSubHeader li {
-  float: left; 
+  float: left;  
   width: 117px;
   height: 28px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 20px;
   padding-right: 10px; 
   padding-left: 10px; 
   /* background-image: url('images/sublink.jpg'); */ 
@@ -299,7 +299,7 @@ img#header {
 	/*font-family: 'Times New Roman';*/
 	font-family: Arial, Helvetica, sans-serif;
 	/*font-size: 10pt;*/
-	font-size: 14pt;
+	font-size: 12pt;
 	font-weight: bold; 
 	text-align: center;
 	/* border-style: solid;
