--- a/bootstrap.css
+++ b/bootstrap.css
@@ -146,7 +146,7 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 18px;
 	line-height: 20px;
-	color: #3366FF;
+	background-color: #09477f;
 	text-transform: none;
 	font-weight: 400;
 }
