--- a/event.css
+++ b/event.css
@@ -6,7 +6,7 @@ div.errorMessage {
 
 body {
 	margin: 0px;
-	background-color:#fff;
+	background-color:#000;
 }
 
 #event {
@@ -81,7 +81,7 @@ body {
 }
 
 #event_body {
-	
+	background-color: #000;
 }
 
 #event_special_people {
