--- a/event.css
+++ b/event.css
@@ -6,7 +6,6 @@ div.errorMessage {
 
 body {
 	margin: 0px;
-	background-color:#000;
 }
 
 #event {
@@ -51,6 +50,7 @@ body {
 
 #event_attendees th {
 	text-align: left;
+	color: #3298ff;
 }
 
 #event_title {
@@ -58,6 +58,7 @@ body {
 	font-size: 12pt;
 	padding: 2px;
 	background-color: #d5e4f2;
+	color: #3298ff;
 }
 
 #event_navbar {
@@ -66,7 +67,8 @@ body {
 	margin: 5px 0px 5px 5px;
 	padding: 5px;
 	background-color: white;
-	border: dashed 1px black;
+	border: solid 1px rgba(0, 0, 0, .4);
+	color: #3298ff;
 }
 
 #event_navbar ul {
@@ -81,7 +83,7 @@ body {
 }
 
 #event_body {
-	background-color: #000;
+	
 }
 
 #event_special_people {
