--- a/event.css
+++ b/event.css
@@ -6,6 +6,7 @@ div.errorMessage {
 
 body {
 	margin: 0px;
+	background-color: #fff;
 }
 
 #event {
@@ -112,7 +113,7 @@ body {
 
 .event_comment {
 	margin: 0px 0px 3px 0px;
-	border: dashed 1px black;
+	border: solid 1px rgba(0, 0, 0, 0.4);
 }
 
 .event_comment_body {
