--- a/ggwiki.css
+++ b/ggwiki.css
@@ -64,13 +64,14 @@ table {
 }
 
 td.key {
-    font-weight: bold;
+    font-size: 14px;
     padding-bottom: 5px;
 }
 
 td.value {
     padding-left: 1em;
     padding-bottom: 5px;
+    font-size: 14px;
 }
 
 div.edit_button {
@@ -200,3 +201,4 @@ thead.position_table {
 input.button {
     padding: 3px;
 }
+
