--- a/requirements.css
+++ b/requirements.css
@@ -8,10 +8,15 @@
 	font-weight: bold;
 	background-color: #B4B5D6;
 	border: solid 1px black;
+	color: #232741;
+	padding: 3px;
 }
 
 #requirements td {
-	width: auto;
+	margin: 0;
+	padding-top: 10px;
+	padding-right: 3px;
+	padding-left: 0px;
 }
 
 #requirements td.hours {
