--- a/template.css
+++ b/template.css
@@ -33,6 +33,7 @@ div.imagewrap {
 h1 {
     font-size: 17pt;
     font-family: 'Open Sans';
+    padding-bottom: 8px;
 }
 h2 {
     font-size: 20pt;
