--- a/reset.css
+++ b/reset.css
@@ -8,7 +8,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquot
 	margin: 0;
 	padding-top: 3;
 	padding-right: 3px;
-	/* padding-bottom: 7px; */
+	padding-bottom: 10px;
 	padding-left: 0px;
 }
 
