--- a/bootstrap.css
+++ b/bootstrap.css
@@ -2013,9 +2013,11 @@ input[type="submit"].btn.btn-mini {
 }
 .nav-tabs {
   border-bottom: 1px solid #ddd;
+  padding-bottom: 0;
 }
 .nav-tabs > li {
   margin-bottom: -1px;
+  padding-bottom: 0px;
 }
 .nav-tabs > li > a {
   padding-top: 8px;
