--- a/template.css
+++ b/template.css
@@ -41,6 +41,10 @@ h2 {
     margin-right: 107px;
     font-weight: 400;
 }
+
+h2.title {
+    margin-right: 0;
+}
 h3 {
     font-weight: 400;
     text-decoration: underline;
