--- a/template.css
+++ b/template.css
@@ -36,6 +36,10 @@ h1 {
     padding-bottom: 8px;
     margin-right: 107px;
 }
+
+.profile-info h1 {
+    margin-right: 0;
+}
 h2 {
     font-size: 20pt;
     margin-right: 107px;
