--- a/reset.css
+++ b/reset.css
@@ -14,6 +14,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquot
 
 #apo_short_search_input {
     padding-bottom: 0;
+    font-size: 16px;
 }
 
 table{border-collapse:collapse;border-spacing:0;}
