--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4641,6 +4641,9 @@ button.close {
   textarea,
   .uneditable-input {
     margin-left: 0;
+    padding-bottom: 3px;
+    font-size: 14px;
+    padding-left: 5px;
   }
   .controls-row [class*="span"] + [class*="span"] {
     margin-left: 30px;
