--- a/template.css
+++ b/template.css
@@ -152,8 +152,7 @@ img#header {
     background-color: #09477F;
 }
 #paperSubHeader #welcomeBar p {
-    margin-left: 13px;
-    padding-right: -35px;
+    margin: 0px 0 -8px 13px;
     color: #FFF;
 }
 #paperSubHeader #welcomeBar a {
