padding on the bars

--- a/template.css
+++ b/template.css
@@ -24,6 +24,7 @@ div {
     text-align: center;
     padding-top: 10px;
     padding-right: 7px;
+    padding-left: 7px;
 }
 
 #apo_short_search_result {
