--- a/template.css
+++ b/template.css
@@ -23,7 +23,7 @@ div {
     display: block;
     text-align: center;
     padding-top: 10px;
-    padding-right: 7px;
+    /* padding-right: 7px; */
 }
 
 #apo_short_search_result {
