styles are overlapping, need to clean it up

--- a/template.css
+++ b/template.css
@@ -375,7 +375,8 @@ strong,
 }
 #paperSubHeader #welcomeBar #logout,
 #paper .login form {
-    float: right
+    float: right;
+    margin-right: 10px;
 }
 #paper .upcomingEvents .moduleTitle,
 #paper .mailer .moduleTitle,
