changed default font to Open Sans

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -143,7 +143,7 @@ textarea {
 }
 body {
 	margin: 0;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', Arial, sans-serif;
 	font-size: 18px;
 	line-height: 20px;
 	text-transform: none;
