--- a/template.css
+++ b/template.css
@@ -244,13 +244,16 @@ img#header {
 #paper .upcomingEvents .eventBox .title a {
     color: #000;
     font-weight: 700;
+    font-family: Helvetica;
 }
 #paper .upcomingEvents .eventBox .date {
     color: #0947ff;
+    font-family: Helvetica;
 }
 
 #paper .upcomingEvents .eventBox .location {
     color: #0947ff;
+    font-family: Helvetica;
 }
 #paper .shoutbox .postingBox {
     font-size: 8pt;
@@ -273,6 +276,8 @@ img#header {
     font-weight: 700;
     font-size: 10pt;
     border: solid 1px #000;
+    font-family: 'Helvetica';
+    padding: 5 0 5 0;
 }
 #paper .evalnag .eventList {
     padding: 5px
@@ -386,7 +391,9 @@ strong,
     text-align: center;
     font-weight: 700;
     font-size: 10pt;
+    padding: 5 0 5 0;
     border-bottom: solid 1px #000;
+    font-family: Helvetica;
 }
 #paper .mailer,
 #paper .shoutbox {
@@ -403,6 +410,7 @@ strong,
     font-size: 10pt;
     font-weight: 700;
     padding: 5px;
+    font-family: Helvetica;
 }
 #paper .mailer textarea,
 #paper .shoutbox textarea {
