--- a/bootstrap.css
+++ b/bootstrap.css
@@ -66,6 +66,10 @@ a:focus {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+
+#event strong a {
+    font-weight: bold;
+}
 a:hover,
 a:active {
   outline: 0;
