--- a/template.css
+++ b/template.css
@@ -135,7 +135,7 @@ img#header {
     padding-top: 0;
 }
 #paperSubHeader {
-    margin-top: 75px
+    margin-top: 75px;
 }
 #paperSubHeader #welcomeBar {
     width: 1000px;
