--- a/ggwiki.css
+++ b/ggwiki.css
@@ -187,11 +187,10 @@ div.bottom_button {
 
 table.position_table {
     border: solid 1px black;
-    margin-left: 10px;
     width: 65%;
+    margin: 0 auto;
     margin-top: -10px;
-    margin: 1em; 
-    border-collapse: collapse; 
+    border-collapse: collapse;
 }
 
 td.position_table, th.position_table { 
