--- a/template.css
+++ b/template.css
@@ -181,14 +181,14 @@ img#header {
 }
 #paperSubHeader li {
     height: 28px;
-    padding-right: 10px;
+    /* padding-right: 10px; */
     /* padding-left: 10px; */
     background-repeat: no-repeat;
     margin: 0 auto;
 }
 #paperSubHeader li a {
     color: #0033a0;
-    width: 100px;
+    /* width: 100px; */
     height: 30px;
     line-height: 17px;
     font-family: Open Sans, Helvetica, sans-serif;
